--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "njs_webcrawler",
+  "name": "njs-webcrawler",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.3.3",
     "cheerio": "^1.0.0-rc.12",
     "jetty": "^0.2.1",
     "sqlite3": "^5.1.4"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "webcrawler": "./app.js"
   }
 }
