--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "axios": "^1.3.3",
     "cheerio": "^1.0.0-rc.12",
-    "jetty": "^0.2.1",
-    "sqlite3": "^5.1.4"
+    "jetty": "^0.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
