--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.3.3",
-    "cheerio": "^1.0.0-rc.12",
-    "jetty": "^0.2.1"
+    "cheerio": "^1.0.0-rc.12"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
